[tool.poetry]
name = "redis_admin_client"
version = "0.1.2"
description = "High level redis client"
authors = ["Kharthigeyan Satyamurthy <kharthigeyan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
redis = "^5.0.0"
ray = "^2.54.0"
ipcalc = "^1.99.0"
requests = "^2.28.1"
plotly-express = "^0.4.1"
altair = "^5.0.0"
seaborn = "^0.13.0"
duckdb = "^1.0.0"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
